--- a/style.css
+++ b/style.css
@@ -17,6 +17,16 @@ body {
     letter-spacing: -0.045em;
 }
 
+.header__h4 {
+    font-weight: 600;
+    text-transform: uppercase;
+    margin-bottom: 12px;
+}
+
+.header__paragraph {
+    font-size: 14px;
+    margin-bottom: 42px;
+}
 
 
 .wrapper {
