--- a/style.css
+++ b/style.css
@@ -10,10 +10,11 @@ body {
 }
 
 .wrapper {
-    margin: 1em;
-    margin-right: auto;
-    margin-left: auto;
+    padding: 1em;
+    margin: 0 auto;
     max-width: 1024px;
+    display: flex;
+    flex-direction: column;
 }
 
 .header__h2 {
@@ -83,6 +84,7 @@ body {
     font-family: Montserrat;
 }
 
+/* View for small devices, eg. iPhone 5 */
 @media (max-width: 320px) {
     .gallery {
         display: flex;
@@ -98,9 +100,49 @@ body {
 
 }
 
+/* View for tablets and larger devices */
 @media (min-width: 768px) {
-    .gallery {
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(2, 1fr);
+    .header {
+        display: flex;
+        margin-bottom: 86px;
+        margin-top: 86px;
+        justify-content: space-around;
     }
+
+
+    .header__team-info {
+        flex-basis: 35%;
+    }
+
+    .gallery {
+        /* grid-gap: 20px 50px;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(2, 1fr); */
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+
+    .gallery__item {
+        /* width: 100%; */
+        height: 100%;
+        flex-basis: 20%;
+        justify-self: stretch;
+        margin: 40px;
+        flex-grow: 1;
+    }
+
+    .gallery__item:nth-child(2n),
+    .gallery__item:nth-child(2n+1) {
+        margin-top: 0;
+        margin-bottom: 55px;
+    }
+
+    .gallery__item.gallery__item--2,
+    .gallery__item.gallery__item--5 {
+        margin-top: 50px;
+    }
+
+
+
 }
